--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - LOG_FILE=/app/app.log
     ports:
       - "8002:5000"
+    volumes:
+      - ./flask_data/original_files:/app/original_files
     networks:
       - solr_network
     depends_on:
