--- a/.dockerignore
+++ b/.dockerignore
@@ -5,12 +5,14 @@
 # Data files
 original_files/*
 
+
 # Docker files
 docker/
 mysql_data/
 solr_data/
 **/mysql_data/
 **/solr_data/
+**/flask_data/
 
 # Python cache files
 __pycache__/
